--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-10-09  Miguel de Icaza  <miguel@ximian.com>
+
+	* frontends/gui/VariableDisplay.cs: Add a few GUI touchups to the
+	variable display.
+
 2002-10-08  Martin Baulig  <martin@gnome.org>
 
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
