--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-11  Martin Baulig  <martin@gnome.org>
+
+	* frontends/gui/ModuleDisplay.cs: Added module display.
+
 2002-10-10  Martin Baulig  <martin@gnome.org>
 
 	Improved core file support.
