--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-10-13  Martin Baulig  <martin@gnome.org>
+
+	* class/SourceInfo.cs: Only read the methods when they're needed.
+
 2002-10-12  Martin Baulig  <martin@gnome.org>
 
 	Implemented a SymbolTableManager which maintains all the symbol
