--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-11-28  Martin Baulig  <martin@ximian.com>
+
+	* frontends/command-line/Main.cs: Added new stand-alone command
+	line interpreter.
+
+	* frontends/command-line/Interpreter.cs: Improved this a bit.
+
 2002-10-18  Martin Baulig  <martin@gnome.org>
 
 	* RELEASE-NOTES-0.1.0.txt: Added preliminary release notes.
