--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-12-08  Martin Baulig  <martin@ximian.com>
+
+	* class/ObjectCache.cs: Use one global cleanup thread rather than
+	one thread per object.
+
 2002-12-08  Radek Doulik  <rodo@ximian.com>
 
 	* glue/mono-debugger-readline.h: include stdio.h - fixes
