--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2002-12-10  Martin Baulig  <martin@ximian.com>
 
+	Started to split DebuggerBackend into DebuggerBackend and Process.
+	Later one, a DebuggerBackend will have a Process for each thread
+	of the application being debugged.
+
+	* backends/Process.cs: New public class.
+
+2002-12-10  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/ScriptingContext.cs: Renamed `Process' to
 	`ProcessHandle' since I'm about to create backends/Process.cs.
 
