--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-12-13  Martin Baulig  <martin@ximian.com>
 
+	* frontends/command-line/Interpreter.cs: Commented out almost
+	everything in this file; it'll go away really soon.
+
 	* classes/ThreadNotify.cs: New class; this is basically the same
 	than Gtk.ThreadNotify, but we can't link against gtk in the
 	backend.
