--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-15  Martin Baulig  <martin@ximian.com>
+
+	* backends/ThreadManager.cs: Added a global thread lock mechanism.
+
 2002-12-14  Martin Baulig  <martin@ximian.com>
 
 	* backends/SingleSteppingEngine.cs: All step commands now take an
