--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-12-23  Martin Baulig  <martin@ximian.com>
 
+	* class/ThreadNotify.cs: This can now have multiple listeners
+	(since file descriptors are a precious resource).
+
+2002-12-23  Martin Baulig  <martin@ximian.com>
+
 	* frontends/gui/DebuggerWidget.cs: Added `DebuggerGUI' argument;
 	get the Glade.XML from an internal property of the gui.
 	* frontends/gui/SourceManager.cs: Derive from DebuggerWidget.
